# tdi_bridge

./: .gitignore  CMakeLists.txt  README.md
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
config/: config.yaml
deploy/systemd/: tdi_reader.service
docs/: DEPLOYMENT.md  OPS.md
include/app/: config.hpp  logger.hpp
include/core/: bridge_controller.hpp
include/device/: device_manager.hpp  serial_port.hpp
include/net/: network_bridge.hpp  tcp_bridge.hpp  udp_bridge.hpp
include/protocol/: crsf_parser.hpp
scripts/: install_linux.sh  update_linux.sh
src/: main.cpp
src/app/: config.cpp  logger.cpp
src/core/: bridge_controller.cpp
src/device/: device_manager.cpp  serial_port.cpp
src/net/: network_bridge.cpp  tcp_bridge.cpp  udp_bridge.cpp
src/protocol/: crsf_parser.cpp
